--- a/templates/file.html
+++ b/templates/file.html
@@ -5,6 +5,10 @@
   <head>
     <title>Fatigue Prediction</title>
     <style>
+      table 
+      {
+        margin-bottom: 20px; 
+      } 
       body {
         background-color: #0e2954;
         color: white;
@@ -64,6 +68,7 @@
         padding: 10px;
         width: 200px;
         margin-top: 25px;
+        margin-bottom:25px;
       }
 
       #predictionResult {
@@ -100,16 +105,19 @@
         
       }
       .card {
-        padding: 2rem;
+        padding: 6rem;
+        
+       
       }
       table,
       th,
       td {
         margin-top: 2rem;
-        padding: 13px;
+        padding: 12px;
         border: 2px solid black;
         border-collapse: collapse;
         color: black;
+        margin-bottom:2rem;
       }
       th {
         font-weight: 700;
